# taskManager-backend

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 665fa96a30c1_initial_commit.py
app/models/: user.py
migrations/: env.py
migrations/versions/: 49e69b41c960_account_initial_migrations.py
src/: main.py
src/apps/accounts/: models.py
src/config/: database.py  settings.py
